# ncs_example

./: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
src/: main.c  main.h
src/ble_conf/: ble.c  ble.h
src/ble_services/: custom_service.c  custom_service.h
src/drv/: gpio.c  gpio.h  i2c_drv.c  i2c_drv.h  uart.c  uart.h
src/sensor/M117Z/: m117_mts01_i2c.c  m117_mts01_i2c.h
